--- a/client/package.json
+++ b/client/package.json
@@ -121,6 +121,7 @@
     "@storybook/addon-actions": "^3.3.11",
     "@storybook/addon-links": "^3.3.11",
     "@storybook/addons": "^3.3.11",
-    "@storybook/react": "^3.3.11"
+    "@storybook/react": "^3.3.11",
+    "eslint-config-airbnb": "^16.1.0"
   }
 }
