--- a/server/package.json
+++ b/server/package.json
@@ -1,29 +1,28 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write --single-quote --print-width=100 --trailing-comma=all --tab-width=2 **/*.{js}",
-    "lint": "eslint **/*.{js} --quiet",
-    "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "webpack --colors --progress"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "express": "^4.16.2",
-    "mongoose": "^5.0.5"
+    "express-jwt": "^5.3.0",
+    "jsonwebtoken": "^8.1.1",
+    "mongoose": "^5.0.6"
   },
   "devDependencies": {
-    "eslint": "^4.17.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-prettier": "^2.6.0",
-    "nodemon": "^1.14.12",
-    "prettier": "^1.10.2"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-regenerator": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "source-map-support": "^0.5.3",
+    "start-server-webpack-plugin": "^2.2.1",
+    "webpack": "^3.11.0",
+    "webpack-node-externals": "^1.6.0"
   }
 }
