Rename env variables for development

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,7 @@
 PORT=3000
-JWT_SECRET=mern-prod
-MONGO_URL=mongodb://localhost/mern-dev
+
+JWT_SECRET_DEV=mern-dev
+MONGO_URL_DEV=mongodb://localhost/mern-dev
+
 JWT_SECRET_PROD=mern-prod
 MONGO_URL_PROD=mongodb://localhost/mern-prod
