Add user, auth and query (rest controllers generator), errorhandler

--- a/server/.env.example
+++ b/server/.env.example
@@ -3,5 +3,8 @@ PORT=3000
 JWT_SECRET_DEV=mern-dev
 MONGO_URL_DEV=mongodb://localhost/mern-dev
 
+JWT_SECRET_TEST=mern-test
+MONGO_URL_TEST=mongodb://localhost/mern-test
+
 JWT_SECRET_PROD=mern-prod
 MONGO_URL_PROD=mongodb://localhost/mern-prod
