--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.2",
     "express-jwt": "^5.3.0",
     "jsonwebtoken": "^8.1.1",
+    "lodash.merge": "^4.6.1",
     "mongoose": "^5.0.6"
   },
   "devDependencies": {
