--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.6",
+    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -21,6 +22,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.1",
     "eslint": "4.10.0",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-react": "^1.1.7",
     "eslint-config-react-app": "^2.1.0",
@@ -36,20 +38,30 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "^22.1.4",
     "jest-enzyme": "^4.1.1",
+    "js-base64": "^2.4.3",
     "lint-staged": "^6.1.0",
+    "loadable-components": "^1.1.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
+    "preact": "^8.2.7",
+    "preact-compat": "^3.18.0",
     "prettier": "^1.10.2",
     "promise": "8.0.1",
+    "prop-types": "^15.6.1",
     "raf": "3.4.0",
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
     "react-dom": "^16.2.0",
+    "react-form": "^3.3.0",
+    "react-placeholder": "^2.0.0",
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.2.0",
+    "semantic-ui-css": "^2.3.0",
+    "semantic-ui-react": "^0.78.3",
     "source-map-explorer": "^1.5.0",
     "style-loader": "0.19.0",
+    "styled-components": "^3.2.3",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
@@ -61,8 +73,6 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
     "analyze": "source-map-explorer build/static/js/main.*"
   },
   "jest": {
@@ -113,15 +123,8 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
-      "prettier --write --single-quote --print-width=100 --parser=flow --tab-width=2",
+      "prettier --write --single-quote trailing-comma=es5 --print-width=80 --tab-width=2",
       "git add"
     ]
-  },
-  "devDependencies": {
-    "@storybook/addon-actions": "^3.3.11",
-    "@storybook/addon-links": "^3.3.11",
-    "@storybook/addons": "^3.3.11",
-    "@storybook/react": "^3.3.11",
-    "eslint-config-airbnb": "^16.1.0"
   }
 }
